src/widgets/layouts/layout/ui/layout.module.css
.layoutContainer {
  position:relative;
  height:100vh;
  display:grid;
  grid-template-rows:auto 1fr auto;
  /*padding:0 16px;*/
}
.layoutContainer header,
.layoutContainer footer {
  /* 1110px */
  max-width:1142px;
  width:100%;
}
.layoutContainer main {
  margin:0 auto;
}
@media screen and (max-width:768px) {
  .layoutContainer header,
  .layoutContainer footer {
    /*  max-width:640px; */
    max-width:672px;
  }
}

